gcc/testsuite/gcc.target/aarch64/memtag/arguments-1.c
/* { dg-do compile } */
/* { dg-additional-options "-fsanitize=kernel-hwaddress" } */
/* { dg-error ".*'-fsanitize=memtag-stack' is incompatible with '-fsanitize=kernel-hwaddress'.*" "" { target *-*-* } 0 } */
